tweak dollar signs

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
                     <td>Jake</td>
                     <td>Johnson</td>
                     <td>1234</td>
-                    <td>President</td>
-                    <td>210000</td>
+                    <td>Team Lead</td>
+                    <td>$75000</td>
                     <td>
                         <button class="deleteButton">Delete</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>Matt</td>
-                    <td>Przylski</td>
+                    <td>Whitney</td>
+                    <td>Hope</td>
                     <td>1245</td>
-                    <td>VP</td>
-                    <td>150000</td>
+                    <td>Junior Developer</td>
+                    <td>$65000</td>
                     <td>
                         <button class="deleteButton">Delete</button>
                     </td>
@@ -57,8 +57,8 @@
                     <td>Brenda</td>
                     <td>Shultz</td>
                     <td>9898</td>
-                    <td>Director</td>
-                    <td>100000</td>
+                    <td>Support</td>
+                    <td>$40000</td>
                     <td>
                         <button class="deleteButton">Delete</button>
                     </td>
