complete weekend #1 assignment

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-    <h2 id="monthlySalary" >Total Monthly Salary: 0</h2>
+    <h2 id="monthlySalary" >Total Monthly Salary: $0</h2>
     
     
 </body>
